tests/good/lexical/022-commentaire-imbriquer-1.clap
val x : (* type de retourn int *)  int = 42
