tests/bad/typing/023-fun-bad-arrow-type-right-unification.clap
** int -> int != int -> string
val f : (int -> int) = fun (x) => "42"
